fixed image issues on mobile

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ a:hover{
     border-radius: 2vw;
 
     background-image: url("images/vista-bg.jpg");
-    background-position: center;
+    background-position: left;
     background-size: cover;
 }
 
